# HappyCell

./: README.md  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  find_restriction_sites.py  main.py  pyproject.toml
api/bioinformatics/: __init__.py  res_site_dict.py  restriction_sites.py
api/files/: Alphabetized_List_of_Recognition_Specificities.txt  NotI.txt  TP53mRNA.fasta  XhoI.txt  pCINeoSequence.fasta  pCINeo_res_sites.txt
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AdFooter.vue  Description.vue  DropZone.vue  HelloWorld.vue  Navbar.vue  PlasmidDescription.vue  Sidebar.vue  Title.vue  dropzone.vue
frontend/src/components/PlasmidViewer/: PlasmidAxis.vue  PlasmidMap.vue  PlasmidViewer.vue  RestrictionSiteViewer.vue
frontend/src/components/Viewer/: PlasmidLabel.vue  PlasmidMarker.vue  PlasmidTrack.vue  PlasmidViewer.vue  RestrictionSiteViewer.vue
frontend/src/plugins/: vuetify.js
frontend/src/stages/: AnalysisPage.vue  BuildPage.vue  CitationPage.vue  InitialPage.vue  LogisticsPage.vue  ScoringPage.vue
reverse_proxy/: nginx.conf
