[tool.poetry]
name = "damp-lab-project-template"
version = "0.1.0"
description = ""
authors = ["W.R. Jackson <jackson@justjackson.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
